messages z-index issue fixed.

--- a/docroot/sites/all/themes/ambitious/css/all.css
+++ b/docroot/sites/all/themes/ambitious/css/all.css
@@ -441,7 +441,7 @@ html body {
 }
 /* line 15, ../sass/all.scss */
 html body.myvoice {
-  background: url('../images/wid_bg.jpg?1444630439') #eef2f3;
+  background: url('../images/wid_bg.jpg?1440403412') #eef2f3;
 }
 
 /* line 21, ../sass/all.scss */
@@ -453,7 +453,7 @@ html body.node-type-forum-discussion, html body.node-type-forum {
 .messages {
   font-size: 18px;
   padding: 20px;
-  z-index: 998;
+  z-index: 1000;
 }
 @media (max-width: 990px) {
   /* line 26, ../sass/all.scss */
@@ -1594,7 +1594,7 @@ html body.node-type-forum-discussion, html body.node-type-forum {
 .posts-columns .post-actions {
   text-align: center;
   vertical-align: middle;
-  background-image: url('../images/aged-16-25.jpg?1444630437');
+  background-image: url('../images/aged-16-25.jpg?1440403411');
   position: relative;
   max-height: 315px;
   padding: 0;
@@ -1679,7 +1679,7 @@ html body.node-type-forum-discussion, html body.node-type-forum {
 .posts-columns .post-my-voice-actions {
   text-align: center;
   vertical-align: middle;
-  background-image: url('../images/my-voice.jpg?1444630439');
+  background-image: url('../images/my-voice.jpg?1440403412');
   position: relative;
   max-height: 315px;
   background-repeat: no-repeat;
@@ -2340,7 +2340,7 @@ html body.node-type-forum-discussion, html body.node-type-forum {
   content: "";
   width: 10px;
   height: 16px;
-  background: url('../images/sprite.png?1444630439') no-repeat -14px -62px;
+  background: url('../images/sprite.png?1440403412') no-repeat -14px -62px;
 }
 /* line 1553, ../sass/all.scss */
 .top-header .top-header-inner .page-links li a {
